{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 741,
  "lineage": "2248af48-a464-b628-463c-62fdad56b548",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwFrontEnd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:internet-gateway/igw-0ed79eddb6d6c51f5",
            "id": "igw-0ed79eddb6d6c51f5",
            "owner_id": "496664563628",
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "awsAlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496664563628:loadbalancer/app/tf-lb-20220210120421819100000012/4aeef726cb7924e7",
            "arn_suffix": "app/tf-lb-20220210120421819100000012/4aeef726cb7924e7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20220210120421819100000012-548979158.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:496664563628:loadbalancer/app/tf-lb-20220210120421819100000012/4aeef726cb7924e7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20220210120421819100000012",
            "security_groups": [
              "sg-073618a1d897b4628",
              "sg-0b13d65b0fa8fe5dd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007bacf97c69c5665"
              },
              {
                "subnet_id": "subnet-06a6001ed147735d8"
              }
            ],
            "subnets": [
              "subnet-007bacf97c69c5665",
              "subnet-06a6001ed147735d8"
            ],
            "vpc_id": "vpc-0c379db3ac2e6d7ee",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allowAllIngress",
            "aws_security_group.outboundFromALB",
            "aws_security_group.webServer",
            "aws_subnet.frontEndServer-a",
            "aws_subnet.frontEndServer-b",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "awsAlbListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496664563628:listener/app/tf-lb-20220210120421819100000012/4aeef726cb7924e7/505dad8abfebe44c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:496664563628:targetgroup/tf-20220210120415219600000003/daeff8b2092483b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:496664563628:listener/app/tf-lb-20220210120421819100000012/4aeef726cb7924e7/505dad8abfebe44c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:496664563628:loadbalancer/app/tf-lb-20220210120421819100000012/4aeef726cb7924e7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.awsAlb",
            "aws_lb_target_group.awsAlbTg",
            "aws_security_group.allowAllIngress",
            "aws_security_group.outboundFromALB",
            "aws_security_group.webServer",
            "aws_subnet.frontEndServer-a",
            "aws_subnet.frontEndServer-b",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "awsAlbTg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:496664563628:targetgroup/tf-20220210120415219600000003/daeff8b2092483b3",
            "arn_suffix": "targetgroup/tf-20220210120415219600000003/daeff8b2092483b3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:496664563628:targetgroup/tf-20220210120415219600000003/daeff8b2092483b3",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20220210120415219600000003",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "dbServerAcl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:network-acl/acl-0e33b5a8a59144ef7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e33b5a8a59144ef7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "496664563628",
            "subnet_ids": [
              "subnet-022f4cc813e02ab80",
              "subnet-0692766e201151f38"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.backEndDB-a",
            "aws_subnet.backEndDB-b",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "jenkinsServerAcl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:network-acl/acl-0eadb79696286f596",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0eadb79696286f596",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "496664563628",
            "subnet_ids": [
              "subnet-036a58f54903dc59c"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.backEndJenkins",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "webServerAcl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:network-acl/acl-03340da57b0f0f98c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03340da57b0f0f98c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "496664563628",
            "subnet_ids": [
              "subnet-007bacf97c69c5665",
              "subnet-06a6001ed147735d8"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.frontEndServer-a",
            "aws_subnet.frontEndServer-b",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dbRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:route-table/rtb-0f2c630410f9a4719",
            "id": "rtb-0f2c630410f9a4719",
            "owner_id": "496664563628",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "frontEndRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:route-table/rtb-051d517e57e31d612",
            "id": "rtb-051d517e57e31d612",
            "owner_id": "496664563628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed79eddb6d6c51f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igwFrontEnd",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkinsRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:route-table/rtb-031e0ce9d9f5f7be0",
            "id": "rtb-031e0ce9d9f5f7be0",
            "owner_id": "496664563628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed79eddb6d6c51f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igwFrontEnd",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dbRTSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0894e089639ece033",
            "route_table_id": "rtb-0f2c630410f9a4719",
            "subnet_id": "subnet-022f4cc813e02ab80"
          },
          "dependencies": [
            "aws_route_table.dbRouteTable",
            "aws_subnet.backEndDB-a",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dbRTbSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017af61481e4d37f5",
            "route_table_id": "rtb-0f2c630410f9a4719",
            "subnet_id": "subnet-0692766e201151f38"
          },
          "dependencies": [
            "aws_route_table.dbRouteTable",
            "aws_subnet.backEndDB-b",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkRTSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf386e065d4f494b",
            "route_table_id": "rtb-031e0ce9d9f5f7be0",
            "subnet_id": "subnet-036a58f54903dc59c"
          },
          "dependencies": [
            "aws_internet_gateway.igwFrontEnd",
            "aws_route_table.jenkinsRouteTable",
            "aws_subnet.backEndJenkins",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webRTSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f479e309b308346",
            "route_table_id": "rtb-051d517e57e31d612",
            "subnet_id": "subnet-06a6001ed147735d8"
          },
          "dependencies": [
            "aws_internet_gateway.igwFrontEnd",
            "aws_route_table.frontEndRouteTable",
            "aws_subnet.frontEndServer-a",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "webRTbSub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084d8ade38744af88",
            "route_table_id": "rtb-051d517e57e31d612",
            "subnet_id": "subnet-007bacf97c69c5665"
          },
          "dependencies": [
            "aws_internet_gateway.igwFrontEnd",
            "aws_route_table.frontEndRouteTable",
            "aws_subnet.frontEndServer-b",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allowAllEgress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-047279033d41ebd31",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047279033d41ebd31",
            "ingress": [],
            "name": "terraform-20220210120415943000000009",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allowAllIngress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-073618a1d897b4628",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-073618a1d897b4628",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220210120415235200000005",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allowPort8080Ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-0649dd8e0c39677d9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0649dd8e0c39677d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20220210120415817200000007",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allowPort80Ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-0f24d364c1a44899a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f24d364c1a44899a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220210120415216800000002",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-0bdd020be9cc1b80e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bdd020be9cc1b80e",
            "ingress": [],
            "name": "terraform-20220210120415518100000006",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inboundFromALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-091fa10c7c18d4819",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-091fa10c7c18d4819",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b13d65b0fa8fe5dd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220210120421820300000013",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.outboundFromALB",
            "aws_security_group.webServer",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inboundToDB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-0a02c7aee3776c9f2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a02c7aee3776c9f2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a60132f78fe129a",
                  "sg-0f7307497d9c11fb5"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-2022021012041918260000000e",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.jenkins",
            "aws_security_group.webServer",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-0f7307497d9c11fb5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0f7307497d9c11fb5",
            "ingress": [],
            "name": "terraform-20220210120415215600000001",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "outboundFromALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-0b13d65b0fa8fe5dd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a60132f78fe129a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b13d65b0fa8fe5dd",
            "ingress": [],
            "name": "terraform-2022021012041906460000000c",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webServer",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "outboundFromDB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-0b10ec75a9653d9eb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a60132f78fe129a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0b10ec75a9653d9eb",
            "ingress": [],
            "name": "terraform-2022021012041906570000000d",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.webServer",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "outboundFromWebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-0f80de9d4ff122224",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bdd020be9cc1b80e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0f80de9d4ff122224",
            "ingress": [],
            "name": "terraform-2022021012041883200000000b",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.database",
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sshAccess",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-0c25bec64941d7e2d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c25bec64941d7e2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220210120415225600000004",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:security-group/sg-07a60132f78fe129a",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07a60132f78fe129a",
            "ingress": [],
            "name": "terraform-20220210120415919500000008",
            "name_prefix": "terraform-",
            "owner_id": "496664563628",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backEndDB-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:subnet/subnet-022f4cc813e02ab80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022f4cc813e02ab80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "496664563628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backEndDB-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:subnet/subnet-0692766e201151f38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0692766e201151f38",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "496664563628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backEndJenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:subnet/subnet-036a58f54903dc59c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036a58f54903dc59c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "496664563628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontEndServer-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:subnet/subnet-06a6001ed147735d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a6001ed147735d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "496664563628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "frontEndServer-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:subnet/subnet-007bacf97c69c5665",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007bacf97c69c5665",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "496664563628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c379db3ac2e6d7ee"
          },
          "dependencies": [
            "aws_vpc.myVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:496664563628:vpc/vpc-0c379db3ac2e6d7ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0567dcd8f11a21aa8",
            "default_route_table_id": "rtb-0643e6fe83ffbecbe",
            "default_security_group_id": "sg-028fb92b74761bd7e",
            "dhcp_options_id": "dopt-085fdcd2addd12c97",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c379db3ac2e6d7ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0643e6fe83ffbecbe",
            "owner_id": "496664563628"
          }
        }
      ]
    }
  ]
}